ultimos detalles proyecto final

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/css/styles.css" />
+    <script
+      src="https://kit.fontawesome.com/69ee9a2ff1.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="main-container">
@@ -43,7 +47,7 @@
       </div>
 
       <div class="menu-mobile">
-        <div class="menu-open-close">
+        <nav class="menu-open-close">
           <div class="header">
             <a href="" class="logo"
               ><img src="images/logo/4.png" width="64" alt=""
@@ -67,21 +71,21 @@
                 <a href="#home">HOME</a>
               </li>
               <li>
-                <a href="#work">WORK</a>
+                <a href="#work">TRABAJOS</a>
               </li>
               <li>
-                <a href="#about">ABOUT</a>
+                <a href="#about">INFO</a>
               </li>
               <li>
-                <a href="#contact">CONTACTS</a>
+                <a href="#contact">CONTACTO</a>
               </li>
             </ul>
           </div>
-        </div>
+        </nav>
       </div>
 
       <!--MAIN SCREEN-->
-      <section class="main-video">
+      <section class="clip1-video">
         <div class="video">
           <video src="video/portada3.mp4" autoplay loop></video>
         </div>
@@ -93,18 +97,22 @@
           Y CINEASTA DOCUMENTAL
         </h2>
         <p>
-          ME APASIONA RETRATAR LAS VIDAS DE PERSONAS REALES, RETRATAR SUS
-          HISTORIAS DE LUCHA, MOSTRAR LOS LUGARES QUE ME RODEAN. DAR A CONOCER
-          LA FUERZA Y LA BELLEZA DE LAS TIERRAS QUE HABITO EN EL NORTE
-          ARGENTINO. ME ENCANTA VIAJAR, ADONDE SEA QUE VOY LLEVO MI CÁMARA.
-          SIEMPRE SEGURO DE QUE HABRÁ UNA HISTORIA PARA CONTAR, UNA LUCHA, UN
-          DERECHO POR CONQUISTAR. POR ESO ELIJO VIVIR DE HACER CINE DOCUMENTAL.
+          Me apasiona retratar las vidas de personas reales, contar sus
+          historias de lucha, mostrar los lugares donde viven. En definitiva
+          capturar el mundo que me rodea para que otros/as lo conozcan alrededor
+          del planeta. Dar a conocer la fuerza y la belleza de las tierras que
+          habito en el Norte de Argentina es mi pasión. Además me encanta viajar
+          y como documentalista he tenido la posibilidad de vivir y compartir
+          con diversas comunidades. Siempre desde el respeto y el valor que
+          poseen las diversas culturas. Adonde sea que voy, llevo mi cámara,
+          siempre seguro de que habrá una historia para contar, una lucha, un
+          derecho por conquistar. Por eso elijo vivir del cine documental.
         </p>
       </section>
 
       <!-- WORK -->
       <section>
-        <h2>WORK</h2>
+        <h2>TRABAJOS</h2>
         <div class="grid work" id="work">
           <a
             href="https://www.youtube.com/watch?v=iMXXTIEDreU&ab_channel=eltucumano"
@@ -175,7 +183,7 @@
             </div>
           </a>
           <a
-            href="https://www.youtube.com/watch?v=SHeeilEtY0s&ab_channel=AgenciadePrensaAlternativahttps://www.youtube.com/watch?v=SHeeilEtY0s&ab_channel=AgenciadePrensaAlternativa"
+            href="https://www.youtube.com/watch?v=mzRI7djC2nc&t=16s&ab_channel=eltucumano"
             class="item"
             target="_blank"
           >
@@ -243,7 +251,6 @@
 
             <div class="social">
               <h3>REDES</h3>
-
               <a href="#">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -308,7 +315,7 @@
       <!--
             FOOTER
         -->
-      <footer>Diseñado por Belén Martínez Gibilisco 2023</footer>
+      <footer></footer>
     </div>
   </body>
 </html>
