agrego detalles en js

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           PERIODISTA <br />
           Y CINEASTA DOCUMENTAL
         </h2>
-        <p>
+        <p id="maquina-de-escribir1">
           Me apasiona retratar las vidas de personas reales, contar sus
           historias de lucha, mostrar los lugares donde viven. En definitiva
           capturar el mundo que me rodea para que otros/as lo conozcan alrededor
